Add Multiverse-Core dependency

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,6 @@
 name: SCSwap
 version: '${project.version}'
-main: io.github.arcoda.SCSwap
+main: io.github.arcoda.SCSwap.SCSwap
 api-version: 1.19
-authors: [ Arcoda ]
+authors: [ 'Arcoda' ]
+depend: ['Multiverse-Core']
