Hook into Luckperms, change respawn location and fragment code for a future command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,6 @@ name: SCSwap
 version: '${project.version}'
 main: io.github.arcoda.SCSwap.SCSwap
 api-version: 1.19
-authors: [ 'Arcoda' ]
-depend: ['Multiverse-Core','Multiverse-Portals']
+authors: [Arcoda]
+depend: [Multiverse-Core, Multiverse-Portals, LuckPerms]
 description: 'Plugin for Creative/Survival server hybrid'
