--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,8 @@ api-version: 1.19
 authors: [Arcoda]
 depend: [Multiverse-Core, Multiverse-Portals, LuckPerms]
 description: 'Plugin for Creative/Survival server hybrid'
+commands:
+  smp:
+    description: Teleport player to the SMP part of the server
+  cmp:
+    description: Teleport player to the CMP part of the server
