--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>SCSwap</groupId>
     <artifactId>SCSwap</artifactId>
-    <version>1.2.1</version>
+    <version>1.2.1-FIX</version>
     <packaging>jar</packaging>
 
     <name>SCSwap</name>
