--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: SCSwap
 version: '${project.version}'
-main: io.github.arcoda.SCSwap.SCSwap
+main: com.github.arcoda.SCSwap.SCSwap
 api-version: 1.19
 authors: [Arcoda]
 depend: [Multiverse-Core, Multiverse-Portals, LuckPerms, NametagEdit]
