--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,8 @@
             <url>https://repo.onarandombox.com/content/groups/public/</url>
         </repository>
         <repository>
-            <id>upstream</id>
-            <url>https://ci.nametagedit.com/plugin/repository/everything/</url>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
         </repository>
     </repositories>
 
@@ -93,9 +93,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.nametagedit</groupId>
-            <artifactId>nametagedit</artifactId>
-            <version>4.4.16</version>
+            <groupId>com.github.sgtcaze</groupId>
+            <artifactId>NametagEdit</artifactId>
+            <version>f552f0d448</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
